# TyrexCAD

./: # Code Citations.md  .gitignor  .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Debug.html  Export-TyrexCAD-SingleFile.ps1  INSTALL.vcxproj  INSTALL.vcxproj.filters  Presentation.html  README.md  TyrexCAD.cpp  TyrexCAD.h  TyrexCAD.sln  TyrexCAD.vcxproj  TyrexCAD.vcxproj.filters  TyrexCAD_Complete_Export.txt  TyrexCAD_Structure.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build_log.bat  check.js  cmake_install.cmake  copy_occt_dlls.bat  extract_structure.ps1  extract_structure_New.ps1  index.html  main.cpp  package-lock.json  package.json  vite.config.js
Debug/: TyrexCAD.exp  TyrexCAD.lib
TyrexCAD.dir/Debug/: TyrexCAD.exe.recipe  TyrexCAD.vcxproj.FileListAbsolute.txt
TyrexCAD.dir/Debug/TyrexCAD.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  TyrexCAD.lastbuildstate  TyrexCAD.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TyrexCAD_autogen/: mocs_compilation_Debug.cpp
TyrexCAD_autogen/include_Debug/5LFMJERZ56/: moc_TyrexRenderingManager.cpp  moc_TyrexRenderingManager.cpp.d  moc_TyrexUnifiedGridSystem.cpp  moc_TyrexUnifiedGridSystem.cpp.d  moc_TyrexViewerManager.cpp  moc_TyrexViewerManager.cpp.d
TyrexCAD_autogen/include_Debug/6NN6KJMFBB/: moc_TyrexMainWindow.cpp  moc_TyrexMainWindow.cpp.d
TyrexCAD_autogen/include_Debug/A4OPOCLQLE/: moc_TyrexLayerManager.cpp  moc_TyrexLayerManager.cpp.d
TyrexCAD_autogen/include_Debug/MQZ7NPL22A/: moc_TyrexCanvasOverlay.cpp  moc_TyrexCanvasOverlay.cpp.d  moc_TyrexViewWidget.cpp  moc_TyrexViewWidget.cpp.d
TyrexCAD_autogen/include_Debug/OSXKRFKLVD/: moc_TyrexCommandManager.cpp  moc_TyrexCommandManager.cpp.d  moc_UpdateManager.cpp  moc_UpdateManager.cpp.d
TyrexCAD_autogen/include_Debug/SDOXPQJJ4P/: moc_TyrexSnapManager.cpp  moc_TyrexSnapManager.cpp.d
TyrexCAD_autogen/include_Debug/TGWXFEG5D4/: moc_TyrexCommand.cpp  moc_TyrexCommand.cpp.d
TyrexCAD_autogen/include_Debug/UD4XDSQBNG/: moc_TyrexSketchManager.cpp  moc_TyrexSketchManager.cpp.d
css/: styles.css
include/TyrexApp/: TyrexMainWindow.h
include/TyrexCanvas/: TyrexCanvasOverlay.h  TyrexGridConfig.h  TyrexModelSpace.h  TyrexViewWidget.h
include/TyrexCommands/: TyrexCommand.h
include/TyrexCore/: CoordinateConverter.h  SafeHandleUtils.h  TyrexApplication.h  TyrexCommand.h  TyrexCommandManager.h  TyrexEntityManager.h  TyrexInitializer.h  TyrexLineCommand.h  TyrexSelectionMode.h  UpdateManager.h
include/TyrexEntities/: TyrexCircleEntity.h  TyrexEntity.h  TyrexLineEntity.h
include/TyrexInteraction/: TyrexInteractionManager.h  TyrexLayerBasedFilter.h  TyrexSelectionFilter.h  TyrexSelectionManager.h  TyrexSelectionObject.h  TyrexTypeBasedFilter.h
include/TyrexLayers/: TyrexLayerManager.h
include/TyrexRendering/: TyrexGridOverlayRenderer.h  TyrexRenderingManager.h  TyrexUnifiedGridSystem.h  TyrexViewerManager.h
include/TyrexSketch/: TyrexSketch.h  TyrexSketchCircleCommand.h  TyrexSketchCircleEntity.h  TyrexSketchConfig.h  TyrexSketchDisplayHelper.h  TyrexSketchEntity.h  TyrexSketchLineCommand.h  TyrexSketchLineEntity.h  TyrexSketchManager.h
include/TyrexSnapping/: TyrexSnapManager.h
js/: app.js  main.js
js/3d/: Shape3DConverter.js
js/core/: DynamicInputManager.js  Geometry.js  GripsController.js  LayerManager.js  LinetypeManager.js  TyrexCAD.js  Units.js  VertexController.js
js/geometry/: GeometryAdvanced.js  GeometryWorker.js
js/tools/: BaseTool.js  LinearDimensionTool.js  Tools.js  ToolsManager.js  index.js
js/tools/3d/: ExtrudeTool.js  index.js
js/tools/advanced/: AnalysisTools.js  ArrayTools.js  BooleanTools.js  ChamferTool.js  CurvesTools.js  FilletTool.js  index.js
js/tools/drawing/: ArcTool.js  CircleTool.js  EllipseTool.js  LineTool.js  PolygonTool.js  PolylineTool.js  RectangleTool.js  TextTool.js  index.js
js/tools/modify/: BreakAtPointTool.js  BreakTool.js  CopyTool.js  ExtendTool.js  MirrorTool.js  MoveTool.js  OffsetTool.js  RotateTool.js  ScaleTool.js  StretchTool.js  TrimTool.js  index.js
js/ui/: UI.js  ui-tools.js
src/: main.cpp
src/TyrexApp/: TyrexMainWindow.cpp
src/TyrexCanvas/: TyrexCanvasOverlay.cpp  TyrexGridConfig.cpp  TyrexModelSpace.cpp  TyrexViewWidget.cpp
src/TyrexCommands/: TyrexCommand.cpp
src/TyrexCore/: TyrexApplication.cpp  TyrexCommand.cpp  TyrexCommandManager.cpp  TyrexEntityManager.cpp  TyrexInitializer.cpp  TyrexLineCommand.cpp
src/TyrexEntities/: TyrexCircleEntity.cpp  TyrexEntity.cpp  TyrexLineEntity.cpp
src/TyrexInteraction/: TyrexInteractionManager.cpp  TyrexLayerBasedFilter.cpp  TyrexSelectionFilter.cpp  TyrexSelectionManager.cpp  TyrexSelectionObject.cpp  TyrexTypeBasedFilter.cpp
src/TyrexLayers/: TyrexLayerManager.cpp
src/TyrexRendering/: TyrexGridOverlayRenderer.cpp  TyrexRenderingManager.cpp  TyrexUnifiedGridSystem.cpp  TyrexViewerManager.cpp
src/TyrexSketch/: TyrexSketch.cpp  TyrexSketchCircleCommand.cpp  TyrexSketchCircleEntity.cpp  TyrexSketchConfig.cpp  TyrexSketchEntity.cpp  TyrexSketchLineCommand.cpp  TyrexSketchLineEntity.cpp  TyrexSketchManager.cpp
src/TyrexSnapping/: TyrexSnapManager.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
